# shalombot4

./: Cargo.toml  Dockerfile
config/: .env  default.yaml
src/: botconfig.rs  events.rs  main.rs
src/commands/: close.rs  digits.rs  mod.rs  ticket.rs
src/crossword/: mod.rs  puzzle_time_utils.rs
src/dailies/: games.rs
src/digits/: game_state.rs  mod.rs  operation.rs
