[package]
name = "shalombot4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
reqwest = { version = "0.12.14", features = ["blocking"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.23"
chrono-tz = "0.10.1"
log = "0.4.0"
env_logger = "0.11.7"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.15.11", features = ["yaml"]}
once_cell = "1.17.1"
petgraph = "0.7.1"
